--- a/stable/freqtrade/1.0.0/values.yaml
+++ b/stable/freqtrade/1.0.0/values.yaml
@@ -85,6 +85,8 @@ config:
     remove_pumps: false
   api_server:
     enabled: true
+    username: '11'
+    password: '22'
     listen_ip_address: 0.0.0.0
     listen_port: 8080
     verbosity: error
