--- a/stable/freqtrade/1.0.0/templates/configmap.yaml
+++ b/stable/freqtrade/1.0.0/templates/configmap.yaml
@@ -5,6 +5,6 @@ metadata:
 data:
   config.json: 
    api_server:
-      username: {{ .Values.appConf.username }}
-      password: {{ .Values.appConf.password }}
+      username: aaa
+      password: bbb
 {{ toPrettyJson .Values.config | indent 4 }}
