--- a/stable/freqtrade/1.0.0/values1.yaml
+++ b/stable/freqtrade/1.0.0/values1.yaml
@@ -54,12 +54,22 @@ config:
     name: "binance"
     key: '1'
     secret: '2'
-    pair_whitelist:  
-     - "(PEPE|VANRY|SOL|FLOKI|AVAX|NEAR|SEI|BCH/USDT|INJ|ATOM|GALA|RNDR|AGIX|AMP|DYDX|AI|ETC|ENS|XAI|ACA|SAND|SUSHI|VET|BURGER|KDA|STRAX|RDNT|COMP|FTT|TRB|GLMR|OCEAN|LOOM|OM|MAV|ORN|CYBER|SLP|OGN|ENJ|XEC|QI|DEGO|MBOX|NTRN|TWT|ARK|WRX|UMA|CELR|DENT|XVG|STPT|VGX|GFT|LOKA|CHESS|COMBO|VOXEL|CREAM|VTHO|BLZ|DATA/USDT)" 
+    pair_whitelist: [ ]
     pair_blacklist:
       - "(BNB|KCS)/.*"
+      - ".*(_PREMIUM|BEAR|BULL|DOWN|HALF|HEDGE|UP|[1235][SL]|2021)/.*"
+      - ".*USDT_.*"
+      - "(ANC|LUNA|LUNC|USTC)/.*"
+      - "(PEOPLE)/.*"
+      - "(AUD|BRZ|CAD|CHF|EUR|GBP|HKD|IDRT|JPY|NGN|RUB|SGD|TRY|UAH|USD|ZAR)/.*"
+      - "(BUSD|CUSD|CUSDT|DAI|PAX|PAXG|SUSD|TUSD|USDC|USDN|USDP|USDT|UST|VAI|USDD|USDJ)/.*"
+      - "(ACM|AFA|ALA|ALL|ALPINE|APL|ASR|ATM|BAR|CAI|CITY|FOR|GAL|GOZ|IBFK|JUV|LAZIO|LEG|LOCK-1|NAVI|NMR|NOV|OG|PFL|PORTO|PSG|ROUSH|SANTOS|STV|TH|TRA|UCH|UFC|YBO)/.*"
   pairlists:
-    - method: "StaticPairList"
+    - method: "VolumePairList"
+      number_assets: 100
+      sort_key: "quoteVolume"
+    - method: "AgeFilter"
+      min_days_listed: 30
   edge:
     enabled: false
     process_throttle_secs: 1800
