--- a/stable/freqtrade/1.0.0/values.yaml
+++ b/stable/freqtrade/1.0.0/values.yaml
@@ -55,7 +55,7 @@ config:
     key: '1'
     secret: '2'
     pair_whitelist:  
-     - "(PEPE|VANRY|SOL|FLOKI|AVAX|NEAR|SEI|BCH/USDT|INJ|ATOM|GALA|RNDR|AGIX|AMP|DYDX|AI|ETC|ENS|XAI|ACA|SAND|SUSHI|VET|BURGER|KDA|STRAX|RDNT|COMP|FTT|TRB|GLMR|OCEAN|LOOM|OM|MAV|ORN|CYBER|SLP|OGN|ENJ|XEC|QI|DEGO|MBOX|NTRN|TWT|ARK|WRX|UMA|CELR|DENT|XVG|STPT|VGX|GFT|LOKA|CHESS|COMBO|VOXEL|CREAM|VTHO|BLZ|DATA/USDT)" 
+     - "(PEPE|VANRY|SOL|FLOKI|AVAX|NEAR|SEI|BCH/USDT|INJ|ATOM|GALA|RNDR|AGIX|AMP|DYDX|AI|ETC|ENS|XAI|ACA|SAND|SUSHI|VET|BURGER|KDA|STRAX|RDNT|COMP|FTT|TRB|GLMR|OCEAN|LOOM|OM|MAV|ORN|CYBER|SLP|OGN|ENJ|XEC|QI|DEGO|MBOX|NTRN|TWT|ARK|WRX|UMA|CELR|DENT|XVG|STPT|VGX|GFT|LOKA|CHESS|COMBO|VOXEL|CREAM|VTHO|BLZ|DATA/.*)" 
     pair_blacklist:
       - "(BNB|KCS)/.*"
   pairlists:
